# python-readme-generator.py

./: README.md  setup.cfg
