# https://pypi.org/project/setupcfg-generator/
[metadata]
name = python-readme-generator
version = 2019.3.31
url = https://github.com/looking-for-a-job/python-readme-generator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = readme

[options]
install_requires = 
	click
	public
	readme_docstring
	readme_generator
	setupcfg
	setuptools
packages = 
	python_readme_generator
